salesforce/force-app/main/default/objects/ContractRenewalConfig__mdt/ContractRenewalConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the nightly contract renewal merging job</description>
    <label>Contract Renewal Config</label>
    <pluralLabel>Contract Renewal Configs</pluralLabel>
</CustomObject>