salesforce/force-app/main/default/objects/ContractRenewalConfig__mdt/fields/Finalized_Status__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Status__c</fullName>
    <label>Finalized Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>