salesforce/force-app/main/default/objects/ContractRenewalConfig__mdt/fields/Grouping_Fields__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Fields__c</fullName>
    <label>Grouping Fields</label>
    <length>255</length>
    <type>Text</type>
    <description>Semicolon-separated list of Contract field API names that form the renewal grouping key. Defaults to AccountId;Expiration_Date__c when blank.</description>
</CustomField>