salesforce/force-app/main/default/objects/ContractRenewalConfig__mdt/fields/Job_Cron__c.field-meta.xml
<CustomField>
    <fullName>Job_Cron__c</fullName>
    <label>Job Cron Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>